# Linker

./: .dockerignore  .env.backup  .env.example  .env.save  .gitignore  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CSS-MONITORING-README.md  CSS-PX-SCANNER-README.md  CSS_DEDUPLICATION_REPORT.md  CSS_TESTING_SETUP.md  DEPLOYMENT.md  Dockerfile  INTEGRATION_PLAN.md  KNOWLEDGE_MIGRATION_GUIDE.md  MCP_SETUP.md  NAMING-TODO.md  README.md  RENDER_DEPLOY.md  SERVICES_TEST_FRAMEWORK_REPORT.md  TODO.md  TYPOGRAPHY_SYSTEM_COMPLETION_REPORT.md  VERSION_MIGRATION_DOCS.md  analyze_css_variables.py  architecture_design_analysis.json  config.py  consistency_test_results.xml  css-deduplication-summary.json  css-monitor-hook.js  css_variables_analysis_report.json  docker-compose.yml  linker.sh  linker_cli.py  migrate_to_database.sh  package-lock.json  package.json  (+28 more)
.claude/: settings.json
.husky/: pre-commit
TODO/: 00-index.md  01-database-adapter-sync-methods.md  02-learning-recommendation-system.md  03-database-constraints.md  04-error-handling-mechanisms.md  05-performance-optimization.md  06-monitoring-and-health-checks.md  07-code-quality-improvements.md  08-environment-configuration-issues.md  09-api-documentation.md  10-frontend-recommendation-integration.md  11-performance-monitoring.md  README.md
assets/: patterns_enriched_complete.json
core/: __init__.py  ai_service.py  assets.py  cache_manager.py  config.py  config_manager.py  constants.py  display.py  error_classifier.py  error_handler.py  error_types.py  exceptions.py  fallback_strategies.py  knowledge.py  knowledge_assets.py  (+10 more)
(+485 files in other folders)
